--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     font-size: 18px;
 }
 
+.wrapper {
+    text-align: center; 
+}
+
 header {
     background: #ebebeb;
     width: 495px;
@@ -90,6 +94,6 @@ footer {
     padding: 20px 20px;
     margin-top: 10px;
     width: 495px;   
-    bottom: 350px;
+    bottom: 340px;
     position: absolute;
 }
